[project]
name = "regnexe-py"
version = "0.1.0"
description = "Python agent framework built on deepagents, aligned with regnexe-agent"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.6.8",
    "langchain-openai>=0.3.0",
    "langchain-ollama>=0.3.0",
    "langchain-core>=1.4.2",
    "langgraph>=0.5.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["regnexe"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
